# netvfy-agent

./: .gitmodules  CMakeLists.txt  README.md  netvirt-agent-ci_action.yml  snapcraft.yaml
.github/workflows/: netvfy-agent-cli_action.yml  netvirt-agent-ci_action.yml
build_farm/: Dockerfile-windows-cli  Dockerfile-windows-gui  README.md
debian/: postinst  postrm
osx/Netvfy-Agent-launcher.app/Contents/Resources/: applet.icns
src/: CMakeLists.txt  agent.c  agent.h  control.c  ndb.c  switch.c
src/cli/: main.c
src/gui/: accountsettings.cpp  accountsettings.h  accountsettings.ui  main.cpp  maindialog.cpp  maindialog.h
src/gui/rc/: nvagent_ico.xpm
win32/: package_win32.nsi  package_win32_cli.nsi
